// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxField should render 1`] = `
<ListBoxField
  id="test-listbox"
>
  <div
    aria-controls={null}
    aria-haspopup="listbox"
    aria-owns={null}
    className="bx--list-box__field"
    role="combobox"
    tabIndex={-1}
  >
    <ListBoxSelection
      clearSelection={[MockFunction]}
      translateWithId={[Function]}
    >
      <Tag
        className="bx--list-box__selection"
        filter={true}
        onClick={[Function]}
        onClose={[Function]}
        onKeyDown={[Function]}
        title="Clear selected item"
        type="high-contrast"
      >
        <div
          aria-label="Clear selected item undefined"
          className="bx--tag bx--list-box__selection bx--tag--filter bx--tag--high-contrast"
          id="tag-1"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="bx--tag__label"
          >
            High-Contrast
          </span>
          <button
            aria-labelledby="tag-1"
            className="bx--tag__close-icon"
            onClick={[Function]}
          >
            <ForwardRef(Close16)>
              <Icon
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="24 9.4 22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </ListBoxSelection>
  </div>
</ListBoxField>
`;

exports[`ListBoxField should set \`aria-owns\` based when expanded 1`] = `
<ListBoxField
  aria-expanded={true}
  id="test-listbox"
>
  <div
    aria-controls="test-listbox__menu"
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-owns="test-listbox__menu"
    className="bx--list-box__field"
    role="combobox"
    tabIndex={-1}
  >
    <ListBoxSelection
      clearSelection={[MockFunction]}
      translateWithId={[Function]}
    >
      <Tag
        className="bx--list-box__selection"
        filter={true}
        onClick={[Function]}
        onClose={[Function]}
        onKeyDown={[Function]}
        title="Clear selected item"
        type="high-contrast"
      >
        <div
          aria-label="Clear selected item undefined"
          className="bx--tag bx--list-box__selection bx--tag--filter bx--tag--high-contrast"
          id="tag-3"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span
            className="bx--tag__label"
          >
            High-Contrast
          </span>
          <button
            aria-labelledby="tag-3"
            className="bx--tag__close-icon"
            onClick={[Function]}
          >
            <ForwardRef(Close16)>
              <Icon
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="24 9.4 22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </ListBoxSelection>
  </div>
</ListBoxField>
`;
